依助教建議修改

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                 <li><a href="#"><img src="images/youtube.svg" alt="youtube"></a></li>
             </ul>
         </header>
-        <main class="about">
+        <main>
+            <section class="about">
             <h2 class="title">About</h2>
             <img src="images/photo.png" alt="photo" class="photo">
             <ul class="profile font_24">
@@ -32,24 +33,24 @@
                 <li>National Hex School Normal University<br> Department of Visual Design</li>
             </ul>
             <ul class="experience font_24">
-                <li><span class="dot"></span>Founder of ‘’XXXD Official’’</li>
-                <li><span class="dot"></span>Graphic Designer</li>
-                <li><span class="dot"></span>Graphic Intern of Hex School</li>
+                <li>Founder of ‘’XXXD Official’’</li>
+                <li>Graphic Designer</li>
+                <li>Graphic Intern of Hex School</li>
             </ul>
-        </main>
-        <section class="brand text_white bg_black">
+            </section>
+            <section class="brand text_white bg_black">
             <h2 class="title">My Brand ‘’XXXD’’</h2>
             <h3 class="slogan font_24">Just Keep XXXD Everyday</h3>
             <p class="description">2020 年創立的個人服飾品牌<br>
                 引領叛逆少年開啟與社會對話的窗口<br>
                 主打概念潮流T-Shirt</p>
-            <a href="#"><img src="images/brand_img1.png" alt="brand_img1" class="brand_img1"></a>
             <ul class="brand_item">
-                <li><a href="#"><img src="images/brand_img2.png" alt="brand_img2" class="mgr_24"></a></li>
-                <li><a href="#"><img src="images/brand_img3.png" alt="brand_img3"></a></li>
+                <li><a href="#"><img src="images/brand_img1.png" alt="brand_img1" class="brand_img1"></a></li>
+                <li><a href="#"><img src="images/brand_img2.png" alt="brand_img2" class="pd_12"></a></li>
+                <li><a href="#"><img src="images/brand_img3.png" alt="brand_img3" class="pd_12"></a></li>
             </ul>
-        </section>
-        <section class="work">
+            </section>
+            <section class="work">
             <h2 class="title">Other Works</h2>
             <p class="description mgt16_mgb56">2016-2020 年累積的作品<br>海報/廣告/攝影/LOGO/3D</p>
             <ul class="work_img">
@@ -90,7 +91,8 @@
                     <h4>官網設計/2020</h4>
                 </li>
             </ul>
-        </section>
+            </section>
+        </main>
         <footer class="footer text_white bg_black">
             <h2 class="title">Contact</h2>
             <ul class="contact">
