--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
             <img src="images/photo.png" alt="photo" class="photo">
             <ul class="profile font_24">
                 <li class="lh_42">Joanne Chen</li>
-                <li class="birth lg_42">1997/10/10</li>
+                <li class="birth lh_42">1997/10/10</li>
                 <li>National Hex School Normal University<br> Department of Visual Design</li>
             </ul>
             <ul class="experience font_24">
-                <li>Founder of ‘’XXXD Official’’</li>
-                <li>Graphic Designer</li>
-                <li>Graphic Intern of Hex School</li>
+                <li class="dot">Founder of ‘’XXXD Official’’</li>
+                <li class="dot">Graphic Designer</li>
+                <li class="dot">Graphic Intern of Hex School</li>
             </ul>
             </section>
             <section class="brand text_white bg_black">
